# tiny-search-engine

./: CMakeLists.txt  README.md  run.sh  runner.cpp
include/: indexer.hpp  tiny-search-engine.hpp
src/: CMakeLists.txt  indexer.cpp  tiny-search-engine.cpp
